// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GET /files Files_200 1`] = `
Object {
  "data": Array [
    Object {
      "createdAt": Any<String>,
      "id": 1,
      "name": "fichier",
      "path": "S10",
      "size": 150,
      "type": "john.doe@enib.fr",
      "updatedAt": Any<String>,
    },
  ],
  "length": 1,
  "max": 1,
  "page": 1,
}
`;

exports[`GET /files/:id Files_200 1`] = `
Object {
  "createdAt": Any<String>,
  "id": Any<Number>,
  "name": "John",
  "path": "S10",
  "size": 150,
  "type": "john.doe@enib.fr",
  "updatedAt": Any<String>,
}
`;

exports[`POST /files ValidFiles_200 1`] = `
Object {
  "createdAt": Any<String>,
  "id": Any<Number>,
  "name": "John",
  "path": "S10",
  "size": "150",
  "type": "john.doe@enib.fr",
  "updatedAt": Any<String>,
}
`;

exports[`PUT /files/:id Files_200_NotAnyDataUpdated 1`] = `
Object {
  "createdAt": Any<String>,
  "id": Any<Number>,
  "name": "John",
  "path": "S10",
  "size": 150,
  "type": "john.doe@enib.fr",
  "updatedAt": Any<String>,
}
`;

exports[`PUT /files/:id Files_200_UpdateAllData 1`] = `
Object {
  "createdAt": Any<String>,
  "id": Any<Number>,
  "name": "John",
  "path": "S10",
  "size": "250",
  "type": "john.doe@enib.fr",
  "updatedAt": Any<String>,
}
`;
